[gd_scene load_steps=3 format=3 uid="uid://802s5kvqr3ka"]

[ext_resource type="Script" path="res://Charter/CharterUI.gd" id="1_7qrr2"]
[ext_resource type="Script" path="res://Charter/CharterNodeView.gd" id="2_5jmha"]

[node name="Charter" type="Node"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7qrr2")

[node name="NodeView" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_5jmha")

[node name="EmptyRMBClickContextMenu" type="PopupMenu" parent="NodeView"]
size = Vector2i(151, 100)
item_count = 1
item_0/text = "Create new node"

[node name="NodeRMBClickContextMenu" type="PopupMenu" parent="NodeView"]
size = Vector2i(141, 100)
item_count = 2
item_0/text = "Create new link"
item_1/text = "Delete node"
item_1/id = 1

[connection signal="index_pressed" from="NodeView/EmptyRMBClickContextMenu" to="NodeView" method="_on_empty_menu_index_pressed"]
[connection signal="index_pressed" from="NodeView/NodeRMBClickContextMenu" to="NodeView" method="_on_node_menu_index_pressed"]
